; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_asus-laptop.c_read_display.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_asus-laptop.c_read_display.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AE_OK = common dso_local global i32 0, align 4
@display_get_handle = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"Error reading display status\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @read_display to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_display() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  store i64 0, i64* %1, align 8
  %3 = load i32, i32* @AE_OK, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i64, i64* @display_get_handle, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %15

6:                                                ; preds = %0
  %7 = load i64, i64* @display_get_handle, align 8
  %8 = call i32 @acpi_evaluate_integer(i64 %7, i32* null, i32* null, i64* %1)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i64 @ACPI_FAILURE(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %6
  %13 = call i32 @pr_warning(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %6
  br label %15

15:                                               ; preds = %14, %0
  %16 = load i64, i64* %1, align 8
  %17 = and i64 %16, 15
  store i64 %17, i64* %1, align 8
  %18 = load i64, i64* %1, align 8
  %19 = trunc i64 %18 to i32
  ret i32 %19
}

declare dso_local i32 @acpi_evaluate_integer(i64, i32*, i32*, i64*) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i32 @pr_warning(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
